# kernel_tuner

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  contributing.html  convolution.html  correctness.html  design.html  details.html  diffusion.html  examples.html  genindex.html  hostcode.html  hyperparamtuning.json  index.html  install.html  kernel_tuner.py  matrix.html  matrix_multiplication.html  new  noxfile.py  objects.inv  params.json  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  search.html  searchindex.js  setup.py  stable  (+8 more)
.doctrees/: contributing.doctree  convolution.doctree  correctness.doctree  design.doctree  diffusion.doctree  environment.pickle  examples.doctree  hostcode.doctree  index.doctree  install.doctree  matrix_multiplication.doctree  templates.doctree  user-api.doctree  vocabulary.doctree
0.1.0/: convolution.html  correctness.html  design.html  details.html  diffusion.html  genindex.html  hostcode.html  index.html  internal.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html
0.1.1/: convolution.html  correctness.html  details.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html
0.1.2/: convolution.html  correctness.html  design.html  examples.html  genindex.html  hostcode.html  index.html  internal.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  user-api.html
0.1.3/: contributing.html  convolution.html  correctness.html  design.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  user-api.html
0.1.4/: contributing.html  convolution.html  correctness.html  design.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  user-api.html
0.1.5/: contributing.html  convolution.html  correctness.html  design.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  user-api.html
0.1.6/: contributing.html  convolution.html  correctness.html  design.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html
0.1.7/: contributing.html  convolution.html  convolution.ipynb  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.ipynb  user-api.html
0.1.8/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html
0.1.9/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html
0.2.0/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html  vocabulary.html
0.3.0/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html
0.3.1/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  user-api.html
0.3.2/: contributing.html  convolution.html  correctness.html  design.html  diffusion.html  examples.html  genindex.html  hostcode.html  index.html  install.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  user-api.html
0.4.0/: convolution.html  design.html  diffusion.html  genindex.html  hostcode.html  install.html  matrix_multiplication.html  objects.inv  observers.html  search.html  searchindex.js  templates.html  user-api.html
0.4.1/: contributing.html  convolution.html  diffusion.html  diffusion.ipynb  examples.html  genindex.html  hostcode.html  index.html  matrix_multiplication.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  templates.html  vocabulary.html
0.4.2/: contributing.html  convolution.html  correctness.html  examples.html  genindex.html  hostcode.html  index.html  objects.inv  observers.html  py-modindex.html  search.html  searchindex.js  templates.html  user-api.html
0.4.3/: .buildinfo  contents.html  contributing.html  convolution.html  diffusion.html  examples.html  grid3d.html  optimization.html  py-modindex.html  searchindex.js  structs.html  templates.html  user-api.html  vocabulary.html
0.4.4/: .buildinfo  cache_files.html  contributing.html  convolution.html  correctness.html  diffusion.html  examples.html  matrix_multiplication.ipynb  observers.html  optimization.html  py-modindex.html  search.html  searchindex.js
0.4.5/: cache_files.html  contributing.html  convolution.html  correctness.html  diffusion.html  (+12 more)
(+903 files in other folders)
